Updated package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aliciasoh",
-  "homepage": "http://aliciasoh.github.io/",
+  "homepage": "http://aliciasoh.github.io/website",
   "version": "1.8.0",
   "description": "aliciasoh website",
   "private": true,
